[gd_scene load_steps=6 format=3 uid="uid://bacfbgy8l2ccj"]

[ext_resource type="Script" path="res://Scripts/UI/main.gd" id="1_5s0tp"]
[ext_resource type="ButtonGroup" uid="uid://pyiy1iw2u8vn" path="res://Resources/button_group_num_characters.tres" id="2_ddsem"]
[ext_resource type="ButtonGroup" uid="uid://cp3vdceiu2tot" path="res://Resources/button_group_num_players.tres" id="3_7d5nd"]

[sub_resource type="Theme" id="Theme_l50s3"]
default_font_size = 45

[sub_resource type="CurveTexture" id="CurveTexture_wsw31"]
width = 32

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5s0tp")
num_characters_group = ExtResource("2_ddsem")
num_players_group = ExtResource("3_7d5nd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.196078, 0.282353, 1)

[node name="Go" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -77.5
offset_right = 126.0
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2
text = "Go"

[node name="PlayerNum" type="SpinBox" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 100.0
offset_right = 120.0
offset_bottom = 329.0
grow_horizontal = 2
theme = SubResource("Theme_l50s3")
theme_override_icons/updown = SubResource("CurveTexture_wsw31")
max_value = 4.0
value = 4.0
alignment = 1

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.0
offset_top = 150.0
offset_right = 187.0
offset_bottom = 230.0
grow_horizontal = 2

[node name="NumCharacters" type="VBoxContainer" parent="Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/NumCharacters"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Number of Characters:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Options/NumCharacters"]
layout_mode = 2
alignment = 1

[node name="NumPlayers" type="VBoxContainer" parent="Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/NumPlayers"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Number of Players:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Options/NumPlayers"]
layout_mode = 2
alignment = 1

[connection signal="pressed" from="Go" to="." method="_on_go_pressed"]
